Adjust cell layouts in table

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 <table>
                     <tr class="table-text">
                         <td>Python</td>
-
+                        <td>Flask</td>
                         <td>Node.js</td>
-
                         <td>Java</td>
 
                     </tr>
                     <tr class="table-stars">
+                        <td>⭐️⭐️⭐️⭐️ </td>
                         <td>⭐️⭐️⭐️⭐️ </td>
                         <td>⭐️⭐️</td>
                         <td>⭐️</td>
@@ -66,8 +66,8 @@
 
                         <tr>
                             <td>Ansible</td>
-                            <td>PostgreSQL</td>
                             <td>Bash Scripting</td>
+                            <td>PostgreSQL</td>
                         </tr>
 
                         <tr>
@@ -78,8 +78,8 @@
                         <tr class="spacer"></tr>
 
                         <tr>
-                            <td>Jenkins</td>
                             <td>Git</td>
+                            <td>Jenkins</td>
                             <td>AWS</td>
                         </tr>
 
