--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Jack</h1>
-        <p>A software developer.</p>
+        <h2>A software developer.</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img src="images/mountain.png" alt="mountain-img">
     </div>
@@ -40,14 +40,14 @@
                 <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus,
                     erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p><br>
                 <table>
-                    <tr class="table-text">
+                    <tr>
                         <td>Python</td>
                         <td>Flask</td>
                         <td>Node.js</td>
                         <td>Java</td>
 
                     </tr>
-                    <tr class="table-stars">
+                    <tr>
                         <td>⭐️⭐️⭐️⭐️ </td>
                         <td>⭐️⭐️⭐️⭐️ </td>
                         <td>⭐️⭐️</td>
