--- a/index.html
+++ b/index.html
@@ -25,20 +25,23 @@
     <div class="middle-container">
         <div class="profile">
             <img class="profile-pic" src="images/jack.jpg" alt="jack-descombes">
-            <h2>Hello.</h2>
-            <p>I'm a self-taught developer with a passion for producing innovative, user-friendly applications. Over the past year and a half, I've dedicated
-                myself to learning the ins and outs of software development and dev-ops, working on numerous personal projects and online courses to hone my craft. I pride myself on taking a patient,
-                yet gritty approach to creative and technical challenges, whether working alone or in a collaborative setting.
-            </p>
+            <div class="pro">
+                <h2>Hello.</h2>
+                <p>I'm a self-taught developer with a passion for building dynamic web applications. Over the past year and a half, I've dedicated
+                    myself to learning the ins and outs of software development, honing my skills through personal projects, online courses
+                    and weekly sessions with a mentor.
+                </p>
+            </div>
         </div>
         <hr>
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="back-end" src="" alt="">
+                <img class="back-end" src="images/terminal.png" alt="terminal">
                 <h3>Back-End Languages & Frameworks</h3>
-                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus,
-                    erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p><br>
+                <br>
+                <!-- <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus,
+                    erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p><br> -->
                 <table>
                     <tr>
                         <td>Python</td>
@@ -58,10 +61,11 @@
 
             </div>
             <div class="skill-row">
-                <img class="devops" src="" alt="">
+                <img class="devops" src="images/devops.png" alt="devops">
                 <h3>Developer Tools and Databases</h3>
-                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris.
-                    Curabitur wisi, quisque vel eu, rutrum nam.</p><br>
+                <br>
+                <!-- <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris.
+                    Curabitur wisi, quisque vel eu, rutrum nam.</p><br> -->
                 <table>
 
                         <tr>
@@ -106,10 +110,11 @@
             </div>
 
             <div class="skill-row">
-                <img class="front-end" src="" alt="">
+                <img class="front-end" src="images/web-design.png" alt="front-end">
                 <h3>Front-End Languages & Frameworks</h3>
-                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris.
-                    Curabitur wisi, quisque vel eu, rutrum nam.</p><br>
+                <br>
+                <!-- <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris.
+                    Curabitur wisi, quisque vel eu, rutrum nam.</p><br> -->
                 <table>
                     <tr>
                         <td>HTML/CSS</td>
