Clean up content and bg color

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h2>Hello.</h2>
                 <p>I'm a self-taught developer with a passion for building dynamic web applications. Over the past year and a half, I've dedicated
                     myself to learning the ins and outs of software development, honing my skills through personal projects, online courses
-                    and weekly sessions with a mentor.
+                    and weekly learning sessions with a mentor. Follow my <a class="text-link" href="jpdesc.com">blog</a> to check out everything I've been working on!
                 </p>
             </div>
         </div>
@@ -136,8 +136,8 @@
         <hr>
         <div class="contact-me">
             <h2>Get In Touch</h2>
-            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <!-- <h3>Contact me, check out projects I'm currently working on, or follow me on Github using the links below!</h3> -->
+            <p>Contact me or check out my projects using the links below!</p><br>
             <a class="btn" href="mailto:jpdesc@alumni.stanford.edu">CONTACT ME</a>
         </div>
     </div>
